--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-# Composer
-.composer
-vendor/*
-!*/vendor/*
+logs/
+cache/
+.htaccess
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Sass
 .sass-cache
